--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,3 +7,72 @@
   margin: 0;
   padding: 0;
 }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  opacity: 0.6;
+  -webkit-transition: opacity 0.3s ease-in;
+  transition: opacity 0.3s ease-in;
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.swiper-slide-active {
+  opacity: 1;
+}
+.swiper-container {
+  width: 100vw;
+}
+
+/* .swiper-pagination {
+  position: relative;
+  bottom: 10px;
+  width: 100%;
+  left: auto !important;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+.swiper-pagination-bullet {
+  padding: 10px 10px;
+  border-radius: 50px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  line-height: 30px;
+  font-size: 12px;
+  color: #000;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+}
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background: #000000 !important;
+}
+.custom_next {
+  position: absolute;
+  left: 40px;
+}
+.custom_prev {
+  position: absolute;
+  right: 40px;
+}
+.swipper-wrapper {
+  pointer-events: none;
+}
+.swipper-slide {
+  pointer-events: auto;
+}
